src/index.css
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
}
.img-movies{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.card{
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
  margin-right: 0.8px;
}

.slick-slider .slides{
 width: 90%;
 padding: 0 30px;
}



.slides {
  height: 350px;
  cursor: pointer;
  display: flex;
  position: relative;
  margin-right: 5px !important;
  transition: transform 0.3s ease;
}


.thisslides{
  cursor: pointer;
  display: flex;
  position: relative;
  margin-right: 5px !important; /* Adjusted margin */
  height: 100%;
}

/* .slick-slider .slidescircle {
  margin-right: 10px;
} */

 .slidescircle {
  width: 250px !important;
  height: 250px;
  border-radius: 50%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: transform 0.3s ease;

  /* &:hover {
    transform: scale(1.01);
  } */

}

.slidescircle img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.slides-sidebar{
  height: 100%;
  margin-right: 10px;
  cursor: pointer;
  display: flex;
  position: relative;
}
.movie-ids {
  position: absolute;
  top: 98px; /* Adjusted top position */
  left: -20px; /* Adjusted left position */
  font-size: 3.0rem; /* Adjusted font size */
  color: rgb(247, 247, 247);
  transform: scaleY(1); /* Adjusted transform */
  transform-origin: 0% 0%;
}

.slidesh{
  height: 330px;
  width: 250px;
  margin-right: 50px;
  cursor: pointer;
}

/* dashboard slider */

.slick-slider .dashslide{
  padding-right: 35px;
}

.dashslide{
  width: 250px !important; /* Set the desired width for your circle */
  height: 200px; /* Set the desired height for your circle *//* Makes the slider circular */
  overflow: hidden; /* Clips content outside the circle */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;


}

.dashslide img {
  width: 100%;
  height: 100%;
  object-fit: cover;  /* Cover the container without stretching */
}

.slidesfriends{
  width: 150px !important; /* Set the desired width for your circle */
  height: 150px; /* Set the desired height for your circle */
  border-radius: 50%; /* Makes the slider circular */
  overflow: hidden; /* Clips content outside the circle */
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
}

.slidesfriends img {
  width: 100%;
  height: 100%;
  object-fit: cover;  /* Cover the container without stretching */
}


.slick-slider .slidesfriends {
  margin-right: 10px;
}



/* end of dashboard slider */
.playmood-logo{
  color: red;
  position: absolute;
  top: 10px;
  left: 20px;
}
.playmood-logo-h{
  color: red;
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 1.1rem;
  font-weight: 700;
}
.movie-title{
  height: fit-content;
  width: 40%;
  padding: 10px 20px 10px 20px ;
  background-color: red;
  position: absolute;
  top: 20px;
  left: 20px;
  border-bottom-right-radius: 40px;
}
.home-page-icon{
  display: flex;
  gap: 39px;
  height: fit-content;
  padding: 0px 0px 10px 0px;
  position: absolute;
  top: 13px;
  right: 300px;
  display: flex;
  z-index: 12;
}
.home-page-icon img{
  height: 40px;
  width: auto;
  cursor: pointer;

}
.movie-title h1 {
  color: white;
  font-size: 1rem;
  font-weight: 500;
  /* For WebKit-based browsers */
  -webkit-line-clamp: 3;
  /* For Firefox */
  -moz-line-clamp: 3;
  /* For IE */
  -ms-line-clamp: 3;
  /* Standard */
  line-clamp: 3;
  /* Ensure text wraps within container */
  display: -webkit-box;
  overflow: hidden;
  /* Ensure proper display for multi-line text */
  -webkit-box-orient: vertical;
  /* Add ellipsis for overflow text */
  text-overflow: ellipsis;

}

.movie-slider{
  width: 100%;
  object-fit: cover;
  height: 150px;
}

.banner-stamp{
  padding-right: 30px;
  width: auto;
  height: 25px;
}
.attached-movie-actions{
  width: 100%;
  position: absolute;
  top: 10px;
  padding: 0 5px;
  display: flex;
  justify-content: space-between;
}
.movie-action-like{
  width: 20px;
  height: 20px;
  display: none;
}
.button-movie-action span img{
  width: 5px;
  height: 10px;
}
.button-movie-action{
  background: none;
  border: 1px solid #f7f2f2;
  border-radius: 10px;;
  padding: 5px 10px 5px 10px;
  color: white;
}
.prev-movie-info{
  height: 100px;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  bottom: 0px;
  display: flex;
  justify-content: space-between;
  padding: 15px 10px;
  gap: 10px;
}

.video-hovered{
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.video-hovered-top{
  height: 80px;
  width: 100%;
  background-color: black;
}
.video-hovered-bottom{
  height: 170px;
  width: 100%;
  background-color: black;
  padding: 20px;
}
.video-hovered-bottom h4{
  color: white;
  font-size: 0.8rem;
  font-weight: 600;
}
.video-hovered-bottom p{
  color: white;
  font-size: 0.7rem;
  font-weight: 300;
}
.top-videos-exposed{
  height: 150px;
  width: 90%;
  margin: 0px auto 0px auto;
}
:root {
  --swiper-theme-color: #fff;
}
.swiper-button-next{
  right: 0px;
  position: absolute !important;
  z-index: 999 ;
}
.sliders-container{
  width: 70%;
  padding: 10px;
}
.sidebar-single-movie-page{
  background-color: black;
  width: 100px;
  position: absolute;
  top: 0;
  right: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 30px;
  gap: 50px;

}
.settings-icon{
  height: 40px;
  width: 40px;
}
.search-icon{
  height: 30px;
  width: 30px;
}
.sidebar-expanded-movie-page{
  background-color: black;
  width: 300px;
  position: absolute;
  top: 0;
  right: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
  padding-top: 30px;
  gap: 20px;
  padding-left: 10px;
  padding-right: 1px;
}
/* ... */

